<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudyClient</string>
    
    <string name="academic_lecture">学术讲座</string>
    <string name="avatar">头像</string>
    <string name="check_update">检查更新</string>
    <string name="complete">完成</string>
    <string name="edit">编辑</string>
    <string name="email">邮箱</string>
    <string name="exercise_online">在线练习</string>
    <string name="exit">退出</string>
    <string name="favorite">收藏夹</string>
    <string name="filter">筛选</string>
    <string name="grade">年级</string>
    <string name="hottest">最热</string>
    <string name="latest">最近</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="major">专业</string>
    <string name="name">姓名</string>
    <string name="order">排序</string>
    <string name="password">密码</string>
    <string name="personal_notice">个人通知</string>
    <string name="reading_online">在线阅读</string>
    <string name="recommend">推荐</string>
    <string name="school_news">学校新闻</string>
    <string name="school_notice">校务公告</string>
    <string name="search">搜索</string>
    <string name="setting">设置</string>
    <string name="sign">注册</string>
    <string name="student_id">学号</string>
    <string name="study_online">在线学习</string>
    <string name="test_onlint">在线测试</string>
    <string name="user_info">个人信息</string>

</resources>
